# python-course

./: .gitignore  .nojekyll  010_executing_code.html  01_1_getting_started.html  01_2_executing_code.html  01_getting_started.html  02_types_data_structures.html  031_error_handling.html  03_1_flow_control.html  03_2_error_handling.html  03_flow_control.html  041_scope.html  04_functions.html  051_oop.html  05_comprehensions.html  061_dependencies.html  062_read_and_write.html  063_common_data_formats.html  06_imports.html  081_pandas.html  08_numpy.html  09_plotting.html  10_tests.html  111_debugging.html  11_cli.html  13_tools.html  999_glossary.html  Makefile  README.md  _quarto.yml  basics.html  cli.html  common_data_formats.html  comprehensions.html  debugging.html  dependencies.html  error_handling.html  executing.html  flow_control.html  functions.html  (+21 more)
book/: 010_executing_code.ipynb  01_1_getting_started.ipynb  01_2_executing_code.ipynb  01_getting_started.ipynb  01_getting_started_conda.ipynb  02_types_data_structures.ipynb  03_1_flow_control.ipynb  03_2_error_handling.ipynb  03_flow_control.ipynb  041_scope.ipynb  04_functions.ipynb  051_oop.ipynb  05_comprehensions.ipynb  061_dependencies.ipynb  062_read_and_write.ipynb  063_common_data_formats.ipynb  06_imports.ipynb  07_generators.ipynb  081_pandas.ipynb  08_numpy.ipynb  09_plotting.ipynb  10_testing.ipynb  10_tests.ipynb  111_debugging.ipynb  11_cli.ipynb  13_tools.ipynb  999_glossary.ipynb  _quarto.yml  index.qmd  lab_builtin_for_the_win.ipynb  lab_builtin_for_the_win_solutions.ipynb  lab_explore_data.ipynb  (+3 more)
(+85 files in other folders)
